# theydo-s3-integrations

./: .gitignore  .mambarc  Makefile  README.md  S3_UPLOAD_CAPABILITIES.md  environment.yml  pyproject.toml  requirements.txt  s3tcli
.serena/: project.yml
examples/: README.md  feedback_responses.json  metrics.json  solutions.json  survey_responses.json
schema/: InsightsFile.schema.json  MetricsFile.schema.json  README.md  SolutionsFile.schema.json
schemas/: DataExchangeFile.json  DataPointFileCes.json  DataPointFileCsat.json  DataPointFileNps.json  DataPointFileOther.json  DataPointFileRatio.json  FeedbackResponsesFile.schema.json  InsightsFile.json  InsightsFile.schema.json  MetricsFile.json  MetricsFile.schema.json  OpportunitiesFile.schema.json  ProbeFile.json  SolutionsFile.json  SolutionsFile.schema.json  SurveyResponsesFile.schema.json
scripts/: bootstrap_micromamba.sh
src/s3tcli/: aws.py  cli.py  utils.py  validate.py
